--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
    </section>
 
-   <section class="flexible-container">
+   <section class="flexible-container dream-img">
        <div class="half-width">
            <img src="images/armanex.png" alt="arman_img">
        </div>
@@ -37,8 +37,22 @@
        </div>
    </section>
 
-   <section>
-       
+   <section class="exp-back">
+       <h1 class="sor">Experiences</h1>
+        <div class="flexible-container">
+            <div class="experience">
+                <h1>Full-Stack Web Developer</h1>
+                <h3>2022-Present: Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="experience-1">
+                <h1>Baby Level Web Developer</h1>
+                <h3>2021-2022: Web Developer Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
    </section>
+   <footer><small><p class="last-postion">All @rights reserved by Md. Arman Hossain</p></small></footer>
 </body>
 </html>
